# finalterm

./: CMakeLists.txt  README.md  meson.build  meson_options.txt
data/: finalterm.desktop.in  finalterm.gresource.xml  meson.build  org.gnome.finalterm.gschema.xml
data/Startup/: bash_startup.in
data/Termlets/: wget
data/Themes/default/: default.fttheme  style.css
data/ui/: menu.ui  preferences.ui
po/: POTFILES.in
src/: Autocompletion.vala  CharacterAttributes.vala  ColorScheme.vala  Command.vala  Encoder.vala  FinalTerm.vala  KeyBindings.vala  LineView.vala  Metrics.vala  NestingContainer.vala  NotifyingList.vala  ScrollableTreeView.vala  SelectionManager.vala  Settings.vala  SettingsWindow.vala  StatusBar.vala  Terminal.vala  TerminalOutput.vala  TerminalStream.vala  TerminalView.vala  TerminalWidget.vala  TextMenu.vala  TextView.vala  Theme.vala  Utilities.vala  meson.build
